--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,345 @@
+:root {
+  --neo-bg-color: #e6e7ee;
+  --neo-dark-color: #31344b;
+  --bg-gray: #93a5be;
+  --neo-light-color: #d1d9e6;
+  --bg-success: #18634b;
+  --bg-info: #0056b3;
+  --neo-bg-danger: #a91e2c;
+  --neo-shadow-soft: 6px 6px 12px #b8b9be, -6px -6px 12px #fff !important;
+  --neo-shadow-inset: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+  --neo-border-light: #d1d9e6 !important;
+}
+
 body {
+  background-color: #e6e7ee !important;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Nunito Sans", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none !important;
+  color: var(--neo-dark-color) !important;
+}
+
+.bg-color {
+  background-color: #e6e7ee !important;
+}
+
+.bg-primary {
+  background-color: #e6e7ee !important;
+}
+
+.soft-shadow {
+  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff !important;
+}
+
+.border-light {
+  border-color: #d1d9e6 !important;
+}
+.rounded-radius {
+  border-radius: 50%;
+}
+.display-center {
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+/***** Card ******/
+.neo-card-soft {
+  display: flex;
+  text-align: center;
+  height: 80px;
+  width: 80px;
+  padding: 0;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+.neo-card-inset {
+  display: flex;
+  text-align: center;
+  height: 80px;
+  width: 80px;
+  padding: 0;
+  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+/******** Logo Neumorphic *********/
+.logo {
+  width: 60px;
+  height: 48px;
+  line-height: 48px;
+  border-radius: 8px;
+  font-size: 24px;
+  font-weight: 900;
+  background-color: #e6e7ee;
+  text-align: center;
+  color: #fb7575;
+  margin: 0 auto;
+}
+.logo:hover {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  transition: all 0.2s ease;
+}
+/*********   End Logo    ********/
+
+/****** Top Nav Bar ******/
+.topNavBar {
+  border-radius: 8px;
+  border-color: #b8b9be;
+}
+
+.social-icons a {
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  margin: 5px;
+}
+.social-icons .nav-link {
+  padding: 0 !important;
+}
+.social-icons a:hover {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  transition: all 0.2s ease;
+  border-color: #b8b9be;
+}
+.neobtn {
+  position: relative;
+  transition: all 0.2s ease;
+  letter-spacing: 0.025em;
+  font-size: 1rem;
+  border-color: #d1d9e6;
+  box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.neumorphic {
+  box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
+}
+
+.neumorphic--pressed {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+}
+.box-drop-shadow {
+  box-shadow: var(--neo-shadow-inset);
+}
+.box-top-shadow {
+  box-shadow: -6px -6px 12px #b8b9be, 6px 6px 12px #fff;
+  border-color: var(--neo-border-light);
+}
+
+/****** Bottom Fixed Navigation ******/
+.neo-fixed-navigation {
+  background-color: #e6e7ee;
+  font-weight: 600;
+  box-shadow: -6px -6px 12px #b8b9be, 6px 6px 12px #fff;
+}
+.neo-fixed-navigation .navbar-collapse {
+  justify-content: center;
+}
+.navbar-collapse .nav-link:hover {
+  color: #fb7575 !important;
+}
+
+/******* Home Page  *******/
+.circle {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fb7575;
+  text-align: center;
+  margin: 0 auto;
+}
+
+/********* Section Heading *********/
+.neo-heading {
+  position: relative;
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+}
+.neo-heading::before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: #e6e7ee;
+  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
+}
+.neo-icon-title {
+  font-weight: 700;
+  position: relative;
+  display: block;
+  padding-top: 9px;
+  padding-left: 15px;
+}
+.neo-subtitle {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.card-profile-info {
+  box-shadow: var(--neo-shadow-inset);
+  border: var(--neo-border-light);
+  border-radius: 8px;
+  background-color: var(--neo-bg-color) !important;
+}
+/****** Home Button *******/
+.neo-btn-group {
+  display: flex;
+  justify-content: center;
+}
+
+.neo-card-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 0.5rem;
+  box-shadow: var(--neo-shadow-inset);
+  border: 0.0625rem solid rgba(243, 247, 250, 0.05);
+  border-radius: 0.55rem;
+  height: 300px;
+}
+.neo-card-wrapper .card {
+  background-color: var(--bg-color) !important;
+  border: none;
+}
+.neo-shape {
+  display: flex;
+  width: 7rem;
+  height: 7rem;
+  text-align: center;
+  flex-direction: column;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  border-radius: 63% 37% 30% 70%/50% 45% 55% 50%;
+  box-shadow: var(--neo-shadow-soft);
+}
+.neo-shape-circle {
+  display: flex;
+  text-align: center;
+  height: 80px;
+  width: 80px;
+  padding: 0;
+  border: none;
+  box-shadow: var(--neo-shadow-inset);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  color: var(--neo-dark-color);
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.neo-contact-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+  box-shadow: var(--neo-shadow-inset);
+  border: 0.0625rem solid rgba(243, 247, 250, 0.05);
+  border-radius: 0.55rem;
+}
+
+.neo-card-wrapper a:hover {
+  box-shadow: var(--neo-shadow-soft);
+  border: var(--neo-border-light);
+  border-radius: 0.55rem;
+  height: 100%;
+}
+
+.resume-link {
+  padding: 0.55rem 0.95rem;
+  background-color: #e6e7ee;
+  border-color: #e6e7ee;
+  box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+  border: 0.0625rem solid transparent;
+  border-radius: 2rem;
+}
+.resume-btn a:hover {
+  background-color: #e6e7ee;
+  border-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+/******* CSS Animatation ********/
+@keyframes showup {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes slidein {
+  0% {
+    margin-left: -800px;
+  }
+  20% {
+    margin-left: -800px;
+  }
+  35% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    width: 0px;
+  }
+  20% {
+    opacity: 1;
+    width: 0px;
+  }
+  30% {
+    width: 355px;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    width: 355px;
+  }
 }
